[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/in-game-menu_background.png" type="Texture" id=1]
[ext_resource path="res://TitleScreen/Buttons/OptionsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://TitleScreen/Buttons/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://FadeIn/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://TitleScreen/Buttons/NewGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/theme.tres" type="Theme" id=6]
[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=7]

[node name="TitleScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menu" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
grow_horizontal = 0
rect_scale = Vector2( 1, 0.992897 )
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu"]
margin_right = 834.0
margin_bottom = 920.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="ContinueButton" parent="Menu/Buttons" instance=ExtResource( 3 )]
margin_top = 350.0
margin_right = 300.0
margin_bottom = 410.0

[node name="NewGameButton" parent="Menu/Buttons" instance=ExtResource( 5 )]
margin_top = 430.0
margin_right = 300.0
margin_bottom = 490.0

[node name="OptionsButton" parent="Menu/Buttons" instance=ExtResource( 2 )]
margin_top = 510.0
margin_right = 300.0
margin_bottom = 570.0

[node name="HBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 846.0
margin_right = 1680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Menu/HBoxContainer"]
margin_top = 225.0
margin_right = 834.0
margin_bottom = 695.0
size_flags_vertical = 1
theme = ExtResource( 6 )
text = "The london underground Is a sprawling mess of abandoned tunnels & illegally constructed secret lairs.

Noone has ever truly explored its depths.

Now that you've got nothing better to do, might as well."
autowrap = true

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
